--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <script src="library/p5.js"></script>
     <script src="library/p5.sound.min.js"></script>
     <script src="library/scenemanager.js"></script>
+    <script src="library/p5.playMod.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="utf-8">
 
@@ -9,6 +10,8 @@
   <body>
     <script src="js/constants.js"></script>
     <script src="js/highScores.js"></script>
+    <script src="js/intro.js"></script>
+    <script src="js/bitmapFont.js"></script>
     <script src="js/sketch.js"></script>
   
   </body>
